Updated the project

--- a/EQR_Go2/EQR_Go2/Project_Readme.html
+++ b/EQR_Go2/EQR_Go2/Project_Readme.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <title>Your ASP.NET application</title>
+    <title>NEQRT : a simlpe relief mission tracker for Nepal Earthquake Relief missions</title>
     <style>
         body {
             background: #fff;
